--- a/web/views/index.html
+++ b/web/views/index.html
@@ -27,7 +27,7 @@
                 <label>Last name</label>
                 <input type="text" name="lastname" placeholder="" ng-model="user.last_name">
 
-                <button class="btn" ng-disabled="!user.first_name && !user.last_name" ng-click="search()">Submit</button>
+                <button class="btn" ng-disabled="!user.first_name && !user.last_name" ng-click="search()" onclick="asd();">Submit</button>
 
 
             </fieldset>
